# handcrafted-features-alzheimer

./: .gitignore  README.md  pyproject.toml
data/: adress_clean.csv  ccc_clean.csv
notebooks/: adress_error_analysis.ipynb  adress_in_domain_feature_stability.ipynb  ccc_in_domain_feature_stability.ipynb  cross_out_domain_experiments.ipynb  feature_interpretation.ipynb  features_extraction.ipynb  instructions.md
outputs/: adress_extractedfeatures.csv  ccc_extractedfeatures.csv
outputs/cross_out_domain_experiments_output/: confusion_matrices.csv  cross_domain_coefficients.csv  cross_domain_results.csv  cross_ood_domain_confusion_matrices.csv  feature_overlap_summary.csv  joint_top_features.csv  out_domain_coefficients.csv  out_domain_results.csv  shared_features.csv  shared_relaxed_features.csv
outputs/error_analysis_results/: adress_feature_error_patterns.csv  adress_gender_error_analysis.csv  adress_subject_misclassification_summary.csv  confusion_matrix_interpretation.txt  cross_domain_interpretation.txt
outputs/features_interpretation_output/: dataset_specific_features.csv  direction_conflicts.csv  feature_overlap_interpretation.csv
outputs/in_domain_feature_stability_output/: adress_average_performance_metrics.csv  adress_constant_features_removed.csv  adress_correlation_dropped_pairs.csv  adress_feature_stability_summary.csv  adress_fold_coefficients.csv  adress_fold_performance_metrics.csv  adress_highly_correlated_pairs.csv  adress_in_domain_confusion_matrix.csv  adress_pearson_correlation_matrix.csv  adress_stable_ranked_features.csv  (+9 more)
