[project]
name = "thesis"
version = "0.1.0"
description = ""
authors = [
    {name = "gloriagalasso",email = "152806431+gloriagalasso@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<=3.12.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "elfen (>=1.2.5,<2.0.0)",
    "spacy (>=3.8.11,<4.0.0)",
    "textstat (>=0.7.11,<0.8.0)",
    "pyphen (>=0.17.2,<0.18.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "transformers (<4.50.0)",
    "datasets (>=4.5.0,<5.0.0)",
    "evaluate (>=0.4.6,<0.5.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "nbconvert (>=7.17.1,<8.0.0)",
    "nbclient (>=0.10.4,<0.11.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"
seaborn = "^0.13.2"
matplotlib = "^3.10.7"

